<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sv_credits"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadingEdge="vertical"
    android:gravity="top"
    android:scrollbars="vertical" >

    <LinearLayout
        android:id="@+id/ll_credits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingRight="?android:attr/scrollbarSize" >

        <TextView
            android:id="@+id/l_authors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/l_authors" >
        </TextView>

        <TextView
            android:id="@+id/et_authors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dip"
            android:autoLink="all"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffffff" >
        </TextView>

        <TextView
            android:id="@+id/l_documenters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/l_documenters" >
        </TextView>

        <TextView
            android:id="@+id/et_documenters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dip"
            android:autoLink="all"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffffff" >
        </TextView>

        <TextView
            android:id="@+id/l_translators"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/l_translators" >
        </TextView>

        <TextView
            android:id="@+id/et_translators"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dip"
            android:autoLink="all"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffffff" >
        </TextView>

        <TextView
            android:id="@+id/l_artists"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/l_artists" >
        </TextView>

        <TextView
            android:id="@+id/et_artists"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dip"
            android:autoLink="all"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffffff" >

            <!-- android:editable="false" android:linksClickable="true" android:selectAllOnFocus="false" -->
        </TextView>

        <TextView
            android:id="@+id/l_international_translators"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/l_international_translators" >
        </TextView>

        <TextView
            android:id="@+id/et_international_translators"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dip"
            android:autoLink="all"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffffff" >
        </TextView>

        <TextView
            android:id="@+id/tv_no_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_information_available"
            android:visibility="gone" >
        </TextView>
    </LinearLayout>

</ScrollView>